# cy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: types.hpp
include/CY/: safety.hpp  types.hpp
tests/: maybe.cpp  result.cpp  types.cpp
